# ProjectManager

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/ProjectManager-Application/: Application.hpp
include/ProjectManager-Project/: Project.hpp
src/ProjectManager-Application/: Application.cpp  CMakeLists.txt  main.cpp
templates/C++-Template/: CMakeLists.txt  build.sh
templates/C++-Template/src/: CMakeLists.txt
